# spotlight-segment

./: LICENSE  Makefile  README.md  app.py  constant.py  downloader.py  llm.py  pyproject.toml  service.py
spotlight/api/: __init__.py  error_handlers.py
spotlight/api/routers/: segments.py
spotlight/cli/: main.py
spotlight/core/: config.py  constant.py  downloader.py  dto.py  exceptions.py  llm.py  service.py
