[project]
name = "spotlight-segment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "google-genai>=1.15.0",
    "gradio>=5.30.0",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "uvicorn>=0.34.2",
    "yt-dlp>=2025.4.30",
]
